[WIP] validation script
see #7

--- a/src/app/about/dataset-converter/page.mdx
+++ b/src/app/about/dataset-converter/page.mdx
@@ -22,5 +22,5 @@ This script can be used to ensure that the dataset is correctly formatted and re
 Any new dataset MUST pass the validation script before it can be included in the repository.
 
 ```bash
-uv run validate.py PATH_TO_DATASET
+uv run scripts/validate.py PATH_TO_DATASET
 ```
