Use keys for attachments
Closes #34

--- a/src/datasets/amazon-reviews.mdx
+++ b/src/datasets/amazon-reviews.mdx
@@ -14,8 +14,9 @@ tags:
   - undirected
   - labelled nodes
 attachments:
-  - file: amazon-reviews.txt.gz
-    size: 265141533
+  dataset:
+    url: amazon-reviews.txt.gz
+    size: 265141569
 label-count:
   Home_and_Kitchen: 189172
   Books: 704093
