--- a/src/datasets/cat-edge-Cooking.mdx
+++ b/src/datasets/cat-edge-Cooking.mdx
@@ -37,7 +37,8 @@ edge-label-count:
   moroccan: 821
   russian: 489
 attachments:
-  - file: cat-edge-Cooking.txt
+  dataset:
+    url: cat-edge-Cooking.txt
     size: 3253354
 ---
 
