--- a/src/datasets/cat-edge-MAG-10.mdx
+++ b/src/datasets/cat-edge-MAG-10.mdx
@@ -36,8 +36,9 @@ edge-label-count:
   FOCS: 2487
   STOC: 2284
 attachments:
-  - file: cat-edge-MAG-10.txt
-    size: 2704773
+  dataset:
+    url: cat-edge-MAG-10.txt
+    size: 2234662
 ---
 
 import NodeLabelsChart from "@/components/chart/node-labels";
