--- a/src/datasets/cat-edge-music-blues-reviews.mdx
+++ b/src/datasets/cat-edge-music-blues-reviews.mdx
@@ -26,7 +26,8 @@ edge-label-count:
   Memphis Blues: 26
   Detroit Blues: 4
 attachments:
-  - file: cat-edge-music-blues-reviews.txt
+  dataset:
+    url: cat-edge-music-blues-reviews.txt
     size: 62801
 ---
 
