--- a/src/datasets/contact-high-school.mdx
+++ b/src/datasets/contact-high-school.mdx
@@ -231,7 +231,8 @@ shape:
     - 220
     - 20
 attachments:
-  - file: contact-high-school.txt
+  dataset:
+    url: https://zenodo.org/records/16837446/files/contact-high-school.txt
     size: 7788202
 ---
 
