--- a/src/datasets/contact-primary-school.mdx
+++ b/src/datasets/contact-primary-school.mdx
@@ -132,7 +132,8 @@ shape:
     - 330
     - 33
 attachments:
-  - file: contact-primary-school.txt
+  dataset:
+    url: contact-primary-school.txt
     size: 4860703
 ---
 
