--- a/src/datasets/house-bills.mdx
+++ b/src/datasets/house-bills.mdx
@@ -47,7 +47,8 @@ shape:
   nodes: 1494
   hyperedges: 60987
 attachments:
-  - file: house-bills.txt
+  dataset:
+    url: house-bills.txt
     size: 5330398
 ---
 
