--- a/src/datasets/house-committees.mdx
+++ b/src/datasets/house-committees.mdx
@@ -19,7 +19,8 @@ shape:
   nodes: 1290
   hyperedges: 341
 attachments:
-  - file: house-committees.txt
+  dataset:
+    url: house-committees.txt
     size: 82750
 ---
 
