--- a/src/datasets/mathoverflow-answers.mdx
+++ b/src/datasets/mathoverflow-answers.mdx
@@ -1459,7 +1459,8 @@ shape:
   nodes: 73851
   hyperedges: 5446
 attachments:
-  - file: mathoverflow-answers.txt.gz
+  dataset:
+    url: mathoverflow-answers.txt.gz
     size: 1080405
 ---
 
