--- a/src/datasets/senate-bills.mdx
+++ b/src/datasets/senate-bills.mdx
@@ -47,7 +47,8 @@ shape:
   nodes: 294
   hyperedges: 29157
 attachments:
-  - file: senate-bills.txt
+  dataset:
+    url: senate-bills.txt
     size: 864616
 ---
 
