--- a/src/datasets/senate-committees.mdx
+++ b/src/datasets/senate-committees.mdx
@@ -20,7 +20,8 @@ shape:
   nodes: 282
   hyperedges: 315
 attachments:
-  - file: senate-committees.txt
+  dataset:
+    url: senate-committees.txt
     size: 26579
 ---
 
