--- a/src/datasets/trivago-clicks.mdx
+++ b/src/datasets/trivago-clicks.mdx
@@ -178,7 +178,8 @@ shape:
   nodes: 172738
   hyperedges: 233202
 attachments:
-  - file: trivago-clicks.txt.gz
+  dataset:
+    url: trivago-clicks.txt.gz
     size: 2862488
 ---
 
