--- a/src/datasets/walmart-trips.mdx
+++ b/src/datasets/walmart-trips.mdx
@@ -28,7 +28,8 @@ shape:
   nodes: 88860
   hyperedges: 69906
 attachments:
-  - file: walmart-trips.txt.gz
+  dataset:
+    url: walmart-trips.txt.gz
     size: 1391517
 ---
 
