--- a/src/app/about/contributing/page.mdx
+++ b/src/app/about/contributing/page.mdx
@@ -5,6 +5,11 @@ export const metadata = {
 
 # Contributing Guidelines
 
+## Open an issue
+
+If you have a suggestion for a dataset, but are unsure whether you can add it or have questions about the process, please open an [issue on GitHub](https://github.com/netsci-rwth/ahorn/issues/new/choose).
+We are happy to answer questions and support you through the process.
+
 ## Add a Dataset
 
 We welcome contributions of high-quality datasets to the AHORN repository.
