Add source tag to all datasets

--- a/src/datasets/cat-edge-Cooking.mdx
+++ b/src/datasets/cat-edge-Cooking.mdx
@@ -12,6 +12,7 @@ license: UNKNOWN
 network-type: hypergraph
 tags:
   - edge labels
+  - "source: benson"
 shape:
   nodes: 6714
   hyperedges: 39774
