--- a/src/datasets/cat-edge-MAG-10.mdx
+++ b/src/datasets/cat-edge-MAG-10.mdx
@@ -21,6 +21,7 @@ license: UNKNOWN
 network-type: hypergraph
 tags:
   - edge labels
+  - "source: benson"
 shape:
   nodes: 80198
   hyperedges: 51889
