--- a/src/datasets/cat-edge-vegas-bars-reviews.mdx
+++ b/src/datasets/cat-edge-vegas-bars-reviews.mdx
@@ -11,7 +11,8 @@ citation: |
 license: UNKNOWN
 network-type: hypergraph
 tags:
-- edge labels
+  - edge labels
+  - "source: benson"
 shape:
   nodes: 1234
   hyperedges: 1194
