--- a/src/datasets/congress-bills.mdx
+++ b/src/datasets/congress-bills.mdx
@@ -40,6 +40,7 @@ license: UNKNOWN
 network-type: temporal
 tags:
   - social networks
+  - "source: benson"
 related:
   - house-bills
   - senate-bills
