--- a/src/datasets/contact-high-school.mdx
+++ b/src/datasets/contact-high-school.mdx
@@ -1,5 +1,5 @@
 ---
-title: Contact High School Dataset
+title: Contact High School
 source: https://www.cs.cornell.edu/~arb/data/contact-high-school/
 citation: |
   @article{Benson-2018-simplicial,
@@ -31,6 +31,7 @@ related:
 tags:
   - social networks
   - temporal
+  - "source: benson"
 shape:
   "2013-12-02 11:00:00":
     - 281
