--- a/src/datasets/contact-primary-school.mdx
+++ b/src/datasets/contact-primary-school.mdx
@@ -1,5 +1,5 @@
 ---
-title: Contact Primary School Dataset
+title: Contact Primary School
 source: https://www.cs.cornell.edu/~arb/data/contact-primary-school/
 citation: |
   @article{Benson-2018-simplicial,
@@ -29,6 +29,7 @@ network-type: temporal
 tags:
   - social networks
   - temporal
+  - "source: benson"
 related:
   - contact-high-school
 shape:
