--- a/src/datasets/house-bills.mdx
+++ b/src/datasets/house-bills.mdx
@@ -37,6 +37,7 @@ network-type: hypergraph
 tags:
   - undirected
   - labelled nodes
+  - "source: benson"
 label-count:
   Democrat: 792
   Republican: 702
