--- a/src/datasets/house-committees.mdx
+++ b/src/datasets/house-committees.mdx
@@ -12,6 +12,7 @@ network-type: hypergraph
 tags:
   - undirected
   - labelled nodes
+  - "source: benson"
 label-count:
   Democrat: 620
   Republican: 670
