--- a/src/datasets/stackoverflow-answers.mdx
+++ b/src/datasets/stackoverflow-answers.mdx
@@ -13,6 +13,7 @@ network-type: hypergraph
 tags:
   - undirected
   - labelled nodes
+  - "source: benson"
 shape:
   nodes: 15211989
   hyperedges: 1103243
