--- a/src/datasets/trivago-clicks.mdx
+++ b/src/datasets/trivago-clicks.mdx
@@ -13,6 +13,7 @@ network-type: hypergraph
 tags:
   - undirected
   - labelled nodes
+  - "source: benson"
 label-count:
   India: 9963
   El Salvador: 51
