--- a/src/datasets/walmart-trips.mdx
+++ b/src/datasets/walmart-trips.mdx
@@ -12,6 +12,7 @@ network-type: hypergraph
 tags:
   - undirected
   - labelled nodes
+  - "source: benson"
 label-count:
   Food, Household & Pets: 26178
   Other: 4209
