--- a/src/datasets/amazon-reviews.mdx
+++ b/src/datasets/amazon-reviews.mdx
@@ -13,6 +13,7 @@ network-type: hypergraph
 tags:
   - undirected
   - labelled nodes
+  - "source: benson"
 attachments:
   dataset:
     url: amazon-reviews.txt.gz
