--- a/src/datasets/cat-edge-geometry-questions.mdx
+++ b/src/datasets/cat-edge-geometry-questions.mdx
@@ -11,7 +11,8 @@ citation: |
 license: UNKNOWN
 network-type: hypergraph
 tags:
-- edge labels
+  - edge labels
+  - "source: benson"
 shape:
   nodes: 580
   hyperedges: 1193
