--- a/src/datasets/mathoverflow-answers.mdx
+++ b/src/datasets/mathoverflow-answers.mdx
@@ -13,6 +13,7 @@ network-type: hypergraph
 tags:
   - undirected
   - labelled nodes
+  - "source: benson"
 label-count:
   at.algebraic-topology: 4458
   homology: 163
