--- a/src/datasets/contact-high-school.mdx
+++ b/src/datasets/contact-high-school.mdx
@@ -233,7 +233,7 @@ shape:
     - 20
 attachments:
   dataset:
-    url: https://zenodo.org/records/16837446/files/contact-high-school.txt?download=1&preview=1
+    url: https://zenodo.org/records/16837446/files/contact-high-school.txt?download=1
     size: 7788202
 ---
 
