--- a/src/datasets/algebra-questions.mdx
+++ b/src/datasets/algebra-questions.mdx
@@ -1,5 +1,5 @@
 ---
-title: cat-edge-algebra-questions
+title: Algebra Questions
 source: https://www.cs.cornell.edu/~arb/data/cat-edge-algebra-questions/
 citation: |
   @article{amburg2020fair,
@@ -51,7 +51,7 @@ edge-label-count:
   jordan-algebras: 1
 attachments:
   dataset:
-    url: cat-edge-algebra-questions.txt
+    url: algebra-questions.txt
     size: 68524
 ---
 
