--- a/src/datasets/geometry-questions.mdx
+++ b/src/datasets/geometry-questions.mdx
@@ -1,5 +1,5 @@
 ---
-title: cat-edge-geometry-questions
+title: Geometry Questions
 source: https://www.cs.cornell.edu/~arb/data/cat-edge-geometry-questions/
 citation: |
   @article{amburg2020fair,
@@ -44,7 +44,7 @@ edge-label-count:
   spherical-geometry: 5
 attachments:
   dataset:
-    url: cat-edge-geometry-questions.txt
+    url: geometry-questions.txt
     size: 83454
 ---
 
