--- a/src/datasets/music-blues-reviews.mdx
+++ b/src/datasets/music-blues-reviews.mdx
@@ -1,5 +1,5 @@
 ---
-title: cat-edge-music-blues-reviews
+title: Music Blues Reviews
 source: https://www.cs.cornell.edu/~arb/data/cat-edge-music-blues-reviews/
 citation: |
   @inproceedings{ni2019justifying,
@@ -28,7 +28,7 @@ edge-label-count:
   Detroit Blues: 4
 attachments:
   dataset:
-    url: cat-edge-music-blues-reviews.txt
+    url: music-blues-reviews.txt
     size: 62801
 ---
 
@@ -40,18 +40,7 @@ import { formatNumber } from "@/utils/format";
 Hypergraph where nodes are Amazon reviewers and hyperedges are reviewers who reviewed a certain product category (different types of blues music) within a month timeframe.
 The dataset was derived from the product reviews collected by Jianmo Ni, Jiacheng Li, and Julian McAuley.
 
-<Alert type="warning">
-  The original dataset is temporal, which this version does not capture, yet.
-</Alert>
-
-## Usage
-
-The dataset can be loaded directly in TopoNetX using the following code:
-
-```python
-import toponetx as tnx
-nodes, edges, metadata = tnx.datasets.load_ahorn("cat-edge-music-blues-reviews")
-```
+<Alert type="warning">The original dataset is temporal, which this version does not capture, yet.</Alert>
 
 ## Dataset Statistics
 
