Fix linebreaks in legal documents

--- a/src/app/legal/privacy/page.mdx
+++ b/src/app/legal/privacy/page.mdx
@@ -8,26 +8,25 @@ export const metadata = {
 
 The person responsible within the meaning of the General Data Protection Regulation and other national data protection laws of the member states as well as other data protection regulations is:
 
-Prof. Michael T. Schaub
-Juniorprofessur Computational Network Science
-RWTH Aachen University
-Ahornstraße 55
-52074 Aachen
-Phone: +49 241 80 21490
-Email: schaub@cs.rwth-aachen.de
+Prof. Michael T. Schaub<br />
+Juniorprofessur Computational Network Science<br />
+RWTH Aachen University<br />
+Ahornstraße 55<br />
+52074 Aachen, Germany<br />
+Phone: +49 241 80 21490<br />
+Email: schaub@cs.rwth-aachen.de<br />
 Website: [netsci.rwth-aachen.de](https://netsci.rwth-aachen.de)
 
 ## Data Protection Officer
 
 Contact data of the Data Protection Office of RWTH Aachen University:
 
-Data Protection Office of RWTH Aachen University
-Templergraben 83
-52062 Aachen (physical address)
-52056 Aachen (mailing address)
-Germany
-Phone: +49 241 80-94114
-Email: dsb@rwth-aachen.de
+Data Protection Office of RWTH Aachen University<br />
+Templergraben 83<br />
+52062 Aachen, Germany (physical address)<br />
+52056 Aachen, Germany (mailing address)<br />
+Phone: +49 241 80-94114<br />
+Email: dsb@rwth-aachen.de<br />
 Website: [rwth-aachen.de/dataprotection](https://www.rwth-aachen.de/dataprotection)
 
 ## I. Provision of the website and generation of log files
