--- a/src/app/legal/imprint/page.mdx
+++ b/src/app/legal/imprint/page.mdx
@@ -4,12 +4,12 @@ export const metadata = {
 
 # Legal Notice
 
-Juniorprofessur Computational Network Science  
-RWTH Aachen University  
-Ahornstraße 55  
-52074 Aachen  
-Phone: +49 241 80 21490  
-Email: schaub@cs.rwth-aachen.de  
+Juniorprofessur Computational Network Science<br />
+RWTH Aachen University<br />
+Ahornstraße 55<br />
+52074 Aachen, Germany<br />
+Phone: +49 241 80 21490<br />
+Email: schaub@cs.rwth-aachen.de<br />
 Website: [netsci.rwth-aachen.de](https://netsci.rwth-aachen.de)
 
 RWTH Aachen University is a public corporation. It is represented by the Rector.
