--- a/src/datasets/senate-bills.mdx
+++ b/src/datasets/senate-bills.mdx
@@ -6,11 +6,11 @@ citation: |
     title={Hypergraph clustering: from blockmodels to modularity},
     author={Chodrow, Philip S and Veldt, Nate and Benson, Austin R},
     journal={Science Advances},
-    year={2021}
+    year={2021},
+    doi={10.1126/sciadv.abh1303}
   }
   @article{Fowler-2006-connecting,
     doi = {10.1093/pan/mpl002},
-    url = {https://doi.org/10.1093/pan/mpl002},
     year  = {2006},
     publisher = {Cambridge University Press ({CUP})},
     volume = {14},
@@ -22,7 +22,6 @@ citation: |
   }
   @article{Fowler-2006-cosponsorship,
     doi = {10.1016/j.socnet.2005.11.003},
-    url = {https://doi.org/10.1016/j.socnet.2005.11.003},
     year  = {2006},
     month = {oct},
     publisher = {Elsevier {BV}},
@@ -37,7 +36,7 @@ network-type: hypergraph
 tags:
   - undirected
   - labelled nodes
-  - "source: benson"
+  - 'source: benson'
 related:
   - congress-bills
   - house-bills
@@ -49,8 +48,8 @@ shape:
   hyperedges: 29157
 attachments:
   dataset:
-    url: senate-bills.txt
-    size: 864616
+    url: https://zenodo.org/records/17198877/files/senate-bills.txt?download=1
+    size: 864643
 ---
 
 import NodeLabelsChart from "@/components/chart/node-labels";
