Upload `senate-committees` dataset

--- a/src/datasets/house-committees.mdx
+++ b/src/datasets/house-committees.mdx
@@ -13,6 +13,9 @@ tags:
   - undirected
   - labelled nodes
   - "source: benson"
+related:
+  - house-bills
+  - senate-committees
 label-count:
   Democrat: 620
   Republican: 670
