--- a/src/datasets/senate-bills.mdx
+++ b/src/datasets/senate-bills.mdx
@@ -38,6 +38,7 @@ tags:
   - labelled nodes
   - 'source: benson'
 related:
+  - senate-committees
   - congress-bills
   - house-bills
 label-count:
