Upload `MAG-10` dataset

--- a/src/datasets/MAG-10.mdx
+++ b/src/datasets/MAG-10.mdx
@@ -6,11 +6,11 @@ citation: |
     title   = {Clustering in graphs and hypergraphs with categorical edge labels},
     author  = {Amburg, Ilya and Veldt, Nate and Benson, Austin R.},
     booktitle = {Proceedings of the Web Conference},
-    year    = {2020}
+    year    = {2020},
+    doi={10.1145/3366423.3380152}
   }
   @inproceedings{Sinha-2015-MAG,
     doi = {10.1145/2740908.2742839},
-    url = {https://doi.org/10.1145/2740908.2742839},
     year  = {2015},
     publisher = {{ACM} Press},
     author = {Arnab Sinha and Zhihong Shen and Yang Song and Hao Ma and Darrin Eide and Bo-June (Paul) Hsu and Kuansan Wang},
@@ -21,7 +21,7 @@ license: UNKNOWN
 network-type: hypergraph
 tags:
   - edge labels
-  - "source: benson"
+  - 'source: benson'
 shape:
   nodes: 80198
   hyperedges: 51889
@@ -38,8 +38,8 @@ edge-label-count:
   STOC: 2284
 attachments:
   dataset:
-    url: MAG-10.txt
-    size: 2234662
+    url: https://zenodo.org/records/17200740/files/MAG-10.txt.gz?download=1
+    size: 560579
 ---
 
 import NodeLabelsChart from "@/components/chart/node-labels";
