Upload `walmart-trips` dataset

--- a/src/datasets/walmart-trips.mdx
+++ b/src/datasets/walmart-trips.mdx
@@ -6,13 +6,14 @@ citation: |
     title   = {Clustering in graphs and hypergraphs with categorical edge labels},
     author  = {Amburg, Ilya and Veldt, Nate and Benson, Austin R.},
     booktitle = {Proceedings of the Web Conference},
-    year    = {2020}
+    year    = {2020},
+    doi={10.1145/3366423.3380152}
   }
 network-type: hypergraph
 tags:
   - undirected
   - labelled nodes
-  - "source: benson"
+  - 'source: benson'
 label-count:
   Food, Household & Pets: 26178
   Other: 4209
@@ -30,8 +31,8 @@ shape:
   hyperedges: 69906
 attachments:
   dataset:
-    url: walmart-trips.txt.gz
-    size: 1391517
+    url: https://zenodo.org/records/17201931/files/walmart-trips.txt.gz?download=1
+    size: 1391552
 ---
 
 import NodeLabelsChart from "@/components/chart/node-labels";
