--- a/src/datasets/amazon-reviews.mdx
+++ b/src/datasets/amazon-reviews.mdx
@@ -7,16 +7,17 @@ citation: |
     author={Ni, Jianmo and Li, Jiacheng and McAuley, Julian},
     booktitle={Proceedings of the 2019 Conference on Empirical Methods in Natural Language Processing and the 9th International Joint Conference on Natural Language Processing (EMNLP-IJCNLP)},
     pages={188--197},
-    year={2019}
+    year={2019},
+    doi={10.18653/v1/D19-1018}
   }
 network-type: hypergraph
 tags:
   - undirected
   - labelled nodes
-  - "source: benson"
+  - 'source: benson'
 attachments:
   dataset:
-    url: amazon-reviews.txt.gz
+    url: https://zenodo.org/records/17202002/files/amazon-reviews.txt.gz?download=1
     size: 265141569
 label-count:
   Home_and_Kitchen: 189172
@@ -57,7 +58,7 @@ import NodeLabelsChart from "@/components/chart/node-labels";
 import Stat from "@/components/stat";
 import { formatNumber } from "@/utils/format";
 
-The `amazon-reviews` network is a hypergraph where hyperedges are sets of products reviews on Amazon, as collected by Jianmo Ni, Jiacheng Li, and Julian McAuley (specifically, we use the collection of 5-core datasets).
+The `amazon-reviews` network is a hypergraph where hyperedges are sets of product reviews on Amazon, as collected by Jianmo Ni, Jiacheng Li, and Julian McAuley (specifically, we use the collection of 5-core datasets).
 Nodes are labeled by their product categories.
 
 ## Dataset Statistics
