Upload `algebra-questions` dataset

--- a/src/datasets/algebra-questions.mdx
+++ b/src/datasets/algebra-questions.mdx
@@ -12,7 +12,9 @@ license: UNKNOWN
 network-type: hypergraph
 tags:
   - edge labels
-  - "source: benson"
+  - 'source: benson'
+related:
+  - geometry-questions
 shape:
   nodes: 423
   hyperedges: 1268
@@ -51,7 +53,7 @@ edge-label-count:
   jordan-algebras: 1
 attachments:
   dataset:
-    url: algebra-questions.txt
+    url: https://zenodo.org/records/17202446/files/algebra-questions.txt?download=1
     size: 68524
 ---
 
