Upload `geometry-questions` dataset

--- a/src/datasets/geometry-questions.mdx
+++ b/src/datasets/geometry-questions.mdx
@@ -12,7 +12,9 @@ license: UNKNOWN
 network-type: hypergraph
 tags:
   - edge labels
-  - "source: benson"
+  - 'source: benson'
+related:
+  - algebra-questions
 shape:
   nodes: 580
   hyperedges: 1193
@@ -44,7 +46,7 @@ edge-label-count:
   spherical-geometry: 5
 attachments:
   dataset:
-    url: geometry-questions.txt
+    url: https://zenodo.org/records/17202479/files/geometry-questions.txt?download=1
     size: 83454
 ---
 
