Upload `cooking` dataset

--- a/src/datasets/cooking.mdx
+++ b/src/datasets/cooking.mdx
@@ -6,13 +6,14 @@ citation: |
     title   = {Clustering in graphs and hypergraphs with categorical edge labels},
     author  = {Amburg, Ilya and Veldt, Nate and Benson, Austin R.},
     booktitle = {Proceedings of the Web Conference},
-    year    = {2020}
+    year    = {2020},
+    doi={10.1145/3366423.3380152}
   }
 license: UNKNOWN
 network-type: hypergraph
 tags:
   - edge labels
-  - "source: benson"
+  - 'source: benson'
 shape:
   nodes: 6714
   hyperedges: 39774
@@ -39,8 +40,8 @@ edge-label-count:
   russian: 489
 attachments:
   dataset:
-    url: cooking.txt
-    size: 3253354
+    url: https://zenodo.org/records/17202566/files/cooking.txt.gz?download=1
+    size: 851444
 ---
 
 import NodeLabelsChart from "@/components/chart/node-labels";
