Upload `vegas-bars-reviews` dataset

--- a/src/datasets/vegas-bars-reviews.mdx
+++ b/src/datasets/vegas-bars-reviews.mdx
@@ -12,29 +12,29 @@ license: UNKNOWN
 network-type: hypergraph
 tags:
   - edge labels
-  - "source: benson"
+  - 'source: benson'
 shape:
   nodes: 1234
   hyperedges: 1194
 edge-label-count:
-  "11": 139
-  "5": 133
-  "15": 126
-  "4": 94
-  "6": 106
-  "12": 56
-  "16": 115
-  "7": 104
-  "1": 93
-  "14": 94
-  "8": 68
-  "10": 48
-  "13": 9
-  "3": 6
-  "9": 3
+  '11': 139
+  '5': 133
+  '15': 126
+  '4': 94
+  '6': 106
+  '12': 56
+  '16': 115
+  '7': 104
+  '1': 93
+  '14': 94
+  '8': 68
+  '10': 48
+  '13': 9
+  '3': 6
+  '9': 3
 attachments:
   dataset:
-    url: vegas-bars-reviews.txt
+    url: https://zenodo.org/records/17202660/files/vegas-bars-reviews.txt?download=1
     size: 65649
 ---
 
