Upload `trivago-clicks` dataset

--- a/src/datasets/trivago-clicks.mdx
+++ b/src/datasets/trivago-clicks.mdx
@@ -7,13 +7,14 @@ citation: |
     author  = {Veldt, Nate and Benson, Austin R. and Kleinberg, Jon},
     publisher = {{ACM} Press},
     booktitle = {Proceedings of the 26th {ACM} {SIGKDD} International Conference on Knowledge Discovery and Data Mining},
-    year    = {2020}
+    year    = {2020},
+    doi={10.1145/3394486.3403222}
   }
 network-type: hypergraph
 tags:
   - undirected
   - labelled nodes
-  - "source: benson"
+  - 'source: benson'
 label-count:
   India: 9963
   El Salvador: 51
@@ -180,8 +181,8 @@ shape:
   hyperedges: 233202
 attachments:
   dataset:
-    url: trivago-clicks.txt.gz
-    size: 2862488
+    url: https://zenodo.org/records/17202694/files/trivago-clicks.txt.gz?download=1
+    size: 2862516
 ---
 
 import NodeLabelsChart from "@/components/chart/node-labels";
