Upload `music-blues-reviews` dataset

--- a/src/datasets/music-blues-reviews.mdx
+++ b/src/datasets/music-blues-reviews.mdx
@@ -7,14 +7,15 @@ citation: |
     author={Ni, Jianmo and Li, Jiacheng and McAuley, Julian},
     booktitle={Proceedings of the 2019 Conference on Empirical Methods in Natural Language Processing and the 9th International Joint Conference on Natural Language Processing (EMNLP-IJCNLP)},
     pages={188--197},
-    year={2019}
+    year={2019},
+    doi={10.18653/v1/D19-1018}
   }
 license: UNKNOWN
 network-type: hypergraph
 tags:
   - edge labels
   - temporal
-  - "source: benson"
+  - 'source: benson'
 shape:
   nodes: 1106
   hyperedges: 694
@@ -28,8 +29,8 @@ edge-label-count:
   Detroit Blues: 4
 attachments:
   dataset:
-    url: music-blues-reviews.txt
-    size: 62801
+    url: https://zenodo.org/records/17202708/files/music-blues-reviews.txt?download=1
+    size: 58404
 ---
 
 import NodeLabelsChart from "@/components/chart/node-labels";
