Upload `mathoverflow-answers` dataset

--- a/src/datasets/mathoverflow-answers.mdx
+++ b/src/datasets/mathoverflow-answers.mdx
@@ -7,13 +7,14 @@ citation: |
     author  = {Veldt, Nate and Benson, Austin R. and Kleinberg, Jon},
     publisher = {{ACM} Press},
     booktitle = {Proceedings of the 26th {ACM} {SIGKDD} International Conference on Knowledge Discovery and Data Mining},
-    year    = {2020}
+    year    = {2020},
+    doi={10.1145/3394486.3403222}
   }
 network-type: hypergraph
 tags:
   - undirected
   - labelled nodes
-  - "source: benson"
+  - 'source: benson'
 related:
   - stackoverflow-answers
 label-count:
@@ -1463,8 +1464,8 @@ shape:
   hyperedges: 5446
 attachments:
   dataset:
-    url: mathoverflow-answers.txt.gz
-    size: 1080405
+    url: https://zenodo.org/records/17202738/files/mathoverflow-answers.txt.gz?download=1
+    size: 1080433
 ---
 
 import NodeLabelsChart from "@/components/chart/node-labels";
