Upload `madison-restaurant-reviews` dataset

--- a/src/datasets/madison-restaurant-reviews.mdx
+++ b/src/datasets/madison-restaurant-reviews.mdx
@@ -12,7 +12,7 @@ license: UNKNOWN
 network-type: hypergraph
 tags:
   - edge labels
-  - "source: benson"
+  - 'source: benson'
 shape:
   nodes: 565
   hyperedges: 601
@@ -28,7 +28,7 @@ edge-label-count:
   Indian: 24
 attachments:
   dataset:
-    url: madison-restaurant-reviews.txt
+    url: https://zenodo.org/records/17202762/files/madison-restaurant-reviews.txt?download=1
     size: 29926
 ---
 
