--- a/src/app/about/ahorn-loader/page.mdx
+++ b/src/app/about/ahorn-loader/page.mdx
@@ -26,7 +26,7 @@ To get a full help of available commands and options, run `ahorn-loader --help`.
 
 ## Python Package Usage
 
-To use `ahorn-loader` as a Python package, you can install it via `pip` (or some other package manager of your choice):
+You can install `ahorn-loader` as a Python package from [PyPI](https://pypi.org/project/ahorn-loader/) via `pip` (or some other package manager of your choice):
 
 ```bash
 pip install ahorn-loader
@@ -37,9 +37,7 @@ Then, you can use it in your Python scripts:
 ```python
 import ahorn_loader
 
-# download a dataset
-ahorn_loader.download('dataset_name', 'target_path')
+ahorn_loader.download_dataset("dataset_name", "target_path")
 
-# validate a specific dataset (e.g., before adding it to AHORN)
-ahorn_loader.validate('path_to_dataset_file')
+ahorn_loader.validate("path_to_dataset_file")
 ```
