--- a/src/datasets/contact-primary-school.mdx
+++ b/src/datasets/contact-primary-school.mdx
@@ -29,6 +29,7 @@ network-type: temporal
 tags:
   - social networks
   - temporal
+  - proximity
   - "source: benson"
 related:
   - contact-high-school
